# WakeOnLan-Control-Center

./: .gitignore  Cargo.toml  README.md  config.toml.example  index.html  sw.js
.github/workflows/: deploy_frontend.yml  main.yml
frontend/: app.js  index.html  manifest.json  styles.css  sw.js
src/: api.rs  config.rs  main.rs  wol.rs
