[package]
name = "WakeOnLan-Telegram-bot"
version = "0.3.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }

# HTTPS Server
axum-server = { version = "0.7.1", features = ["tls-rustls"] }

# CORS and other middleware
tower-http = { version = "0.5", features = ["cors", "trace"] }

# JWT Authentication
jsonwebtoken = "9.2"
subtle = "2.5"

# Tokio optimized for routers
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time", "net", "process"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = { version = "0.8", default-features = false, features = ["parse"] }

# Networking
socket2 = { version = "0.5", features = ["all"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
